# TFG

./: README.md
doc/: Execution.md  Manual_de_uso.md  doc.md  example_videos.md  guia_0_instalacion.md  guia_1_ejecutar_funcionalidades.md  guia_2_modificar_funcionalidades.md
src/arduino/: arduino.md
src/arduino/control/: control.ino
src/arduino/control_robot/: control_robot.ino  robot_automatico.ino  robot_manual.ino
src/pybullet/: Directa_v3.m  comprobacion.py  prueba_y_c_d.py  pybullet.md  robot.urdf
src/ros2_ws/: .gitignore  ros2_ws.md
src/ros2_ws/install/: local_setup.sh  setup.sh
src/ros2_ws/install/cpp_servo_bridge/share/cpp_servo_bridge/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/ros2_ws/install/robot_digital_twin/lib/robot_digital_twin/: robot_digital_twin_node
src/ros2_ws/install/robot_digital_twin/share/robot_digital_twin/: package.dsv  package.ps1  package.sh  package.zsh
src/ros2_ws/install/robot_interfaces/share/robot_interfaces/: package.sh
src/ros2_ws/install/robot_inverse_kinematics/lib/robot_inverse_kinematics/: ik_node
src/ros2_ws/install/robot_inverse_kinematics/share/robot_inverse_kinematics/: package.sh  package.zsh
src/ros2_ws/log/: latest_build
src/ros2_ws/src/cpp_servo_bridge/: CMakeLists.txt
src/ros2_ws/src/cpp_servo_bridge/src/: servo_bridge.cpp
src/ros2_ws/src/digital_twin_mal/: CMakeLists.txt  package.xml
src/ros2_ws/src/digital_twin_mal/launch/: simulacion.launch.py
src/ros2_ws/src/digital_twin_mal/src/: digital_twin.cpp
src/ros2_ws/src/digital_twin_mal/worlds/: .empty.wbproj  Ros2Supervisor.proto  empty.wbt
src/ros2_ws/src/install/: local_setup.sh  setup.sh
src/ros2_ws/src/kinematics_node/: CMakeLists.txt
src/ros2_ws/src/kinematics_node/src/: kinematics_node.cpp
src/ros2_ws/src/log/: latest_build
src/ros2_ws/src/robot_cinematics/: CMakeLists.txt  package.xml
src/ros2_ws/src/robot_cinematics/src/: kinematics_node.cpp
src/ros2_ws/src/robot_digital_twin/: setup.cfg  setup.py
src/ros2_ws/src/robot_digital_twin/robot_digital_twin/: robot_digital_twin_node.py
src/ros2_ws/src/robot_interfaces/: CMakeLists.txt
src/ros2_ws/src/robot_interfaces/srv/: AddObstacle.srv  MoveJoint.srv  SolveDK.srv  SolveIK.srv
src/ros2_ws/src/robot_inverse_kinematics/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/robot_inverse_kinematics/robot_inverse_kinematics/: ik_node.py
src/ros2_ws/src/robot_kinematics/: package.xml  setup.py
src/ros2_ws/src/robot_kinematics/robot_kinematics/: robot_kinematics.py
src/ros2_ws/src/robot_pkg/: CMakeLists.txt  package.xml
src/ros2_ws/src/robot_pkg/config/: robot_params.yaml
src/ros2_ws/src/robot_pkg/include/robot_pkg/: move_arm_node.hpp  routine_executor.hpp  rviz_bridge_node.hpp  servo_bridge_node.hpp
src/ros2_ws/src/robot_pkg/launch/: hibrid.launch.py  move_action.launch.py  robot_real.launch.py  simulation.launch.py
src/ros2_ws/src/robot_pkg/rutines/: test_go_home.yaml  test_moveL.yaml  test_move_articulations.yaml  test_tcp.yaml  test_wall.yaml
src/ros2_ws/src/robot_pkg/src/: move_arm_node.cpp  routine_executor.cpp  rviz_bridge_node.cpp  servo_bridge_node.cpp
src/ros2_ws/src/robot_pkg/urdf/: robot.urdf  robot6DOF.urdf  robot_real.urdf  robotfisico.urdf
src/ros2_ws/src/tic_tac_toe_dlc/: CMakeLists.txt  package.xml
src/ros2_ws/src/tic_tac_toe_dlc/include/tic_tac_toe_dlc/: tic_tac_toe_node.hpp
src/ros2_ws/src/tic_tac_toe_dlc/launch/: init_game.launch.py  init_python.sh
src/ros2_ws/src/tic_tac_toe_dlc/models/: ia_modelo.py  modelo_tictactoe.pth
src/ros2_ws/src/tic_tac_toe_dlc/src/: tic_tac_toe_node.cpp
src/ros2_ws/src/tic_tac_toe_dlc/urdf/: ficha_o.urdf
(+138 files in other folders)
